--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "prepublish": "npm run build"
   },
   "devDependencies": {
-    "coffee-script": "^1.9.3"
+    "coffee-script": "1.10.0"
   },
   "repository": {
     "type": "git",
