--- a/package.json
+++ b/package.json
@@ -9,16 +9,37 @@
     "hdmi"
   ],
   "scripts": {
+    "lint": "coffeelint src/",
+    "pretest": "npm run lint",
+    "test": "echo 'no tests'",
+    "prebuild": "npm run test",
     "build": "coffee -o lib/ -c src/",
     "watch": "coffee -o lib/ -cw src/",
     "prepublish": "npm run build"
   },
   "devDependencies": {
-    "coffee-script": "1.10.0"
+    "coffee-script": "1.10.0",
+    "coffeelint": "1.15.7"
   },
   "repository": {
     "type": "git",
     "url": "git://github.com/patlux/node-cec.git"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "coffeelintConfig": {
+    "indentation": {
+      "level": "error",
+      "value": 2
+    },
+    "line_endings": {
+      "value": "unix",
+      "level": "error"
+    },
+    "max_line_length": {
+      "level": "warn"
+    },
+    "no_trailing_whitespace": {
+      "level": "warn"
+    }
+  }
 }
